trunk/Archive2/e7/55ca563493d8c0/output
main.cpp:24:1: error: ‘output’ does not name a type
 output=
 ^
